Fix export dark mode, orientation and clean up code

--- a/www/src/js/timetable-export/main.scss
+++ b/www/src/js/timetable-export/main.scss
@@ -7,6 +7,7 @@ body,
 
 body {
   padding-top: 0.2rem !important;
+  transition: none !important;
 }
 
 :global(.no-export) {
