--- a/www/src/js/views/timetable/TimetableActions.scss
+++ b/www/src/js/views/timetable/TimetableActions.scss
@@ -91,47 +91,3 @@
 @include media-breakpoint-down(xs) {
   @include layout-1;
 }
-
-/*
-  Button groups are complicated because there are total of 5 scenarios to consider
-  1. 380px down (smaller than xs)
-  2. sm down (mobile)
-  3. sm up (horizontal)
-  4. md up (vertical)
-  5. lg up (vertical)
-*/
-//
-//.leftButtonGroup {
-//  // Scenario 2
-//  @include media-breakpoint-down(sm) {
-//    flex-direction: column;
-//    width: 100%;
-//  }
-//}
-//
-//.rightButtonGroup {
-//  // Override specificity
-//  > :global(.btn.btn-svg) {
-//    flex: 1 1 auto;
-//  }
-//
-//  // Scenario 2
-//  @include media-breakpoint-down(sm) {
-//    width: 100%;
-//    margin-top: 0.5rem;
-//  }
-//}
-//
-//:global(.verticalMode) {
-//  // Scenario 4 & 5
-//  .leftButtonGroup {
-//    flex-direction: column;
-//    width: 100%;
-//  }
-//
-//  // Scenario 4 & 5
-//  .rightButtonGroup {
-//    width: 100%;
-//    margin-top: 0.5rem;
-//  }
-//}
